# rust-clean-architecture-v1

./: Cargo.toml  GUIDE_TH.md  Setting.toml
.claude/: settings.local.json
src/: database.rs  lib.rs  main.rs  setting.rs  time_helper.rs
src/entities/: items.rs
src/handlers/: staff.rs
src/models/: error.rs  item.rs  mod.rs
src/repositories/: items.rs  mod.rs  staff.rs
src/usecases/: mod.rs  staff.rs  staff_test.rs
