[package]
name = "rust-clean-architecture-v1"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
async-trait = "0.1.81"
chrono = "0.4.38"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }
config = "0.15.15"
mockall = "0.13.0"